--- a/index.html
+++ b/index.html
@@ -6,5 +6,17 @@
     <title>Intervals and Timers</title>
     <link rel="stylesheet" href="./base.css" />
   </head>
-  <body></body>
+  <body>
+    <script>
+      function buzzer() {
+        console.log('ENNNNNGG')
+      }
+
+      console.log('Starting')
+      setTimeout(buzzer, 2000)
+      console.log('Finishing')
+
+      setInterval(buzzer, 100)
+    </script>
+  </body>
 </html>
